<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.saisr.trivia.MainActivity"
    android:weightSum="1"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/title"
        android:layout_gravity="center_horizontal"

        />


    <ImageView
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:id="@+id/triviaView"
         />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal">


        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/exitButton"
            android:id="@+id/exit_but" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/startButton"
            android:id="@+id/start_but" />
    </LinearLayout>

</LinearLayout>